--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,14 @@
+<% include partials/header%>
+
 <h1>Welcome to the blog page listing</h1>
 
 <% blogs.forEach(function(blog){ %>
-    <div>
-        <h3><%= blog.title %></h3>
-        <img src="<%= blog.image %>">
-        <p><%= blog.body %></p>
-        <p><%= blog.created %></p>
-    </div>
+<div>
+    <h3><%= blog.title %></h3>
+    <img src="<%= blog.image %>">
+    <p><%= blog.body %></p>
+    <p><%= blog.created %></p>
+</div>
 <% }); %>
+
+<% include partials/footer%>
