--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <img src="<%= blog.image %>">
     <p><%= blog.body %></p>
     <p><%= blog.created %></p>
+    <a href="/blogs/<%= blog._id %>">Show more</a>
 </div>
 <% }); %>
 
