--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,22 @@
 <h1>Welcome to the blog page listing</h1>
 
 <% blogs.forEach(function(blog){ %>
-<div>
-    <h3><%= blog.title %></h3>
-    <img src="<%= blog.image %>">
-    <p><%= blog.body %></p>
-    <p><%= blog.created %></p>
-    <a href="/blogs/<%= blog._id %>">Show more</a>
+<div class="ui card">
+    <div class="image">
+        <img src="<%= blog.image %>">
+    </div>
+    <div class="content">
+        <a class="header"><%= blog.title %></a>
+        <div class="meta">
+            <span class="date"><%= blog.created %></span>
+        </div>
+        <div class="description">
+            <%= blog.body %>
+        </div>
+        <div>
+            <a href="/blogs/<%= blog._id %>">More Info</a>
+        </div>
+    </div>
 </div>
 <% }); %>
 
