--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,14 +1,15 @@
 <% include ./partials/header %>
 
-<div class="ui card">
+<div class="ui raised very padded text container segment">
     <div class="image">
         <img src="<%= blog.image %>">
     </div>
     <div class="content">
-        <a class="header"><%= blog.title %></a>
+        <div class="header"><h1><%= blog.title %></div></h1>
         <div class="meta">
             <span class="date"><%= blog.created %></span>
         </div>
+        <br>
         <div class="description">
             <%= blog.body %>
         </div>
