--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,17 +1,21 @@
 <% include ./partials/header %>
 
 <div class="ui raised very padded text container segment">
-    <div class="image">
-        <img src="<%= blog.image %>">
-    </div>
-    <div class="content">
-        <div class="header"><h1><%= blog.title %></div></h1>
-        <div class="meta">
-            <span class="date"><%= blog.created %></span>
-        </div>
-        <br>
-        <div class="description">
-            <%= blog.body %>
+    <div class="ui huge header"><%= blog.title %></div>
+    <div class="ui top attached">
+        <div class="item">
+            <div class="image">
+                <img class="ui centered rounded image" src="<%= blog.image %>">
+            </div>
+            <div class="content">
+                <div class="meta">
+                    <span class="date"><%= blog.created.toDateString() %></span>
+                </div>
+                <br>
+                <div class="description">
+                    <%= blog.body %>
+                </div>
+            </div>
         </div>
     </div>
 </div>
