--- a/views/new.ejs
+++ b/views/new.ejs
@@ -17,7 +17,7 @@
 
         <div class="field">
             <label>Blog Post</label>
-            <textarea name="body" placeholder="Content goes here..."></textarea>
+            <textarea id="mytextarea" name="body" placeholder="Content goes here..."></textarea>
         </div>
 
         <input type="submit" class="ui teal basic button"></input>
