--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,7 +13,7 @@
                 </div>
                 <br>
                 <div class="description">
-                    <%= blog.body %>
+                    <%- blog.body %>
                 </div>
             </div>
         </div>
