--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-    <script src='//cloud.tinymce.com/stable/tinymce.min.js'></script>
+    <script src="http://cloud.tinymce.com/stable/tinymce.min.js?apiKey=scci2ce48jgd2rr98dzy8wend056src8woc21i0w8utwbw14"></script>
     <script>
         tinymce.init({
             selector: '#mytextarea'
