--- a/views/new.ejs
+++ b/views/new.ejs
@@ -2,7 +2,7 @@
 
 <div class="ui raised very padded text container segment">
     <h2 class=" ui header center aligned">FORM</h2>
-    <form method="post"
+    <form method="POST"
           action="/blogs"
           class="ui form">
         <div class="field">
