--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,7 +1,7 @@
 <% include ./partials/header %>
 
 <div class="ui raised very padded text container segment">
-    <h2 class=" ui header center aligned">FORM</h2>
+    <h2 class=" ui header center aligned">Edit Blog - <%= blog.title %></h2>
     <form method="POST"
           action="/blogs/<%= blog._id %>?_method=PUT"
           class="ui form">
