--- a/views/show.ejs
+++ b/views/show.ejs
@@ -19,7 +19,8 @@
                               href="/blogs/<%= blog._id %>/edit">Edit
                     </a>
 
-                <form id="form" method="POST" action="/blogs/<%= blog._id %>">
+                <form id="form" method="POST"
+                      action="/blogs/<%= blog._id %>?_method=DELETE">
                     <button class="ui basic red button">Delete</button>
                 </form>
             </div>
