--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,8 @@
     <script src="http://cloud.tinymce.com/stable/tinymce.min.js?apiKey=scci2ce48jgd2rr98dzy8wend056src8woc21i0w8utwbw14"></script>
     <script>
         tinymce.init({
-            selector: '#mytextarea'
+            selector: '#mytextarea',
+            verify_html : true
         });
     </script>
 </body>
