--- a/views/show.ejs
+++ b/views/show.ejs
@@ -15,14 +15,15 @@
                 <div class="description">
                     <%- blog.body %>
                 </div>
-                    <a class="ui orange basic button"
+                <a class="ui orange basic button"
                               href="/blogs/<%= blog._id %>/edit">Edit
-                    </a>
+                </a>
 
                 <form id="form" method="POST"
                       action="/blogs/<%= blog._id %>?_method=DELETE">
                     <button class="ui basic red button">Delete</button>
                 </form>
+                <a href="/blogs" class="ui basic violet button">Done</a>
             </div>
         </div>
     </div>
