--- a/views/show.ejs
+++ b/views/show.ejs
@@ -12,7 +12,7 @@
                     <span class="date"><%= blog.created.toDateString() %></span>
                 </div>
                 <br>
-                <div class="description">
+                <div class="description blog">
                     <%- blog.body %>
                 </div>
                 <a class="ui orange basic button"
