--- a/public/stylesheet/app.css
+++ b/public/stylesheet/app.css
@@ -1,9 +1,9 @@
 body {
     margin-top: 6em;
     background: #2C3E50; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #2C3E50 , #4CA1AF); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #2C3E50 , #4CA1AF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: -webkit-linear-gradient(#2C3E50 , #4CA1AF) fixed; /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(#2C3E50 , #4CA1AF) fixed; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-repeat: no-repeat;
 }
 
 i.icon {
@@ -38,4 +38,8 @@ i.icon {
 
 .ui.segment {
   padding:50px;
+}
+
+.ui.text.container {
+    margin-bottom: 50px;
 }
