--- a/views/show.ejs
+++ b/views/show.ejs
@@ -23,7 +23,7 @@
                       action="/blogs/<%= blog._id %>?_method=DELETE">
                     <button class="ui basic red button">Delete</button>
                 </form>
-                <a href="/blogs" class="ui basic violet button">Done</a>
+                <a href="/blogs" class="ui basic violet button">Go back</a>
             </div>
         </div>
     </div>
